--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,47 +1,28 @@
-<footer class="site-footer h-card">
+<footer class="site-footer h-card u-full-width">
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
+    <div class="container">
+      <ul class="social-media-list">
+        {% if site.github_username %}
+        <li>
+          {% include icon-github.html username=site.github_username %}
+        </li>
+        {% endif %}
 
-  <div class="wrapper">
-
-    <h2 class="footer-heading">{{ site.title | escape }}</h2>
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-3xs">
-        <ul class="contact-list">
-          <li class="p-name">
-            {% if site.author %}
-              {{ site.author | escape }}
-            {% else %}
-              {{ site.title | escape }}
-            {% endif %}
-            </li>
-            {% if site.email %}
-            <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-            {% endif %}
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-3xs">
-        <ul class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
-
-          {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
-          </li>
-          {% endif %}
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-3xs">
-        <p>{{ site.description | escape }}</p>
+        {% if site.twitter_username %}
+        <li>
+          {% include icon-twitter.html username=site.twitter_username %}
+        </li>
+        {% endif %}
+        <li>
+          <a href="{{ "/feed.xml" | relative_url }}">
+            <i class="fa fa-rss"></i> rss
+          </a>
+        </li>
+      </ul>
+      <div class="contact-email">
+        <a class="u-email" href="mailto:{{ site.email }}">
+          <i class="fa fa-envelope"></i> {{ site.email }}
+        </a>
       </div>
     </div>
-
-  </div>
-
 </footer>
