--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,14 @@
 <header class="site-header" role="banner">
-
-  <div class="wrapper">
+ <div class="u-full-width site-nav-wrapper">
+  <div class="container site-nav-inner">
     {% assign default_paths = site.pages | map: "path" %}
     {% assign page_paths = site.header_pages | default: default_paths %}
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
+      {% include logo.html %}
+    </a>
     {% if page_paths %}
-      <nav class="site-nav">
+      <nav class="site-nav u-pull-right">
+        <!--
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
         <label for="nav-trigger">
           <span class="menu-icon">
@@ -16,16 +19,19 @@
             </svg>
           </span>
         </label>
+        -->
 
-        <div class="trigger">
           {% for path in page_paths %}
             {% assign my_page = site.pages | where: "path", path | first %}
+            {% assign icon = my_page.icon %}
             {% if my_page.title %}
-            <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+            <a class="page-link" href="{{ my_page.url | relative_url }}">
+              <i class="fa {{icon | default: 'fa-bookmark'}}"></i> {{ my_page.title | escape }}
+            </a>
             {% endif %}
           {% endfor %}
-        </div>
       </nav>
     {% endif %}
   </div>
+ </div>
 </header>
