--- a/_includes/icon-twitter.html
+++ b/_includes/icon-twitter.html
@@ -1,1 +1,4 @@
-<a class="u-url" rel="me" href="https://twitter.com/{{ include.username }}"><span class="icon icon--twitter">{% include icon-twitter.svg %}</span><span class="username">{{ include.username }}</span></a>
+<a class="u-url" rel="me" href="https://twitter.com/{{ include.username }}">
+  <i class="fa fa-twitter"></i>
+  <span class="username">{{ include.username }}</span>
+</a>
