--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     {% include header.html %}
 
     <main class="page-content" aria-label="Content">
-      <div class="wrapper">
+      <div class="container">
         {{ content }}
       </div>
     </main>
@@ -16,5 +16,7 @@
     {% include footer.html %}
 
   </body>
+
+  {% include scripts.html %}
 
 </html>
