--- a/_sass/rmc/_footer.scss
+++ b/_sass/rmc/_footer.scss
@@ -14,3 +14,8 @@ ul.social-media-list li {
     display: inline-block;
     padding: 0 .5em;
 }
+
+.site-footer a, .site-footer a:hover,
+.site-footer a:focus, .site-footer a:visited {
+    color: black;
+}
