--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -39,7 +39,7 @@ $header-background: $color-cerulean;
 $logo-background: #3f3f3f;
 
 //$font-main: 'Inconsolata', monospace;
-$font-main: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+$font-main: Tahoma, Geneva, sans-serif;
 $font-secondary: "Trebuchet MS", Helvetica, sans-serif;
 * {
     -webkit-box-sizing: border-box;
