--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,28 +5,7 @@ layout: default
 <div class="home">
 
   {{ content }}
-
-  {% if site.posts.size > 0 %}
-    <ul class="post-list">
-      {% for post in site.posts %}
-        <li>
-          {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
-
-          <h3>
-            <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
-          </h3>
-          <span class="post-meta">
-            <i class="fa fa-calendar"></i> {{ post.date | date: date_format }}
-          </span>
-          {% if post.abstract %}
-          <p class="abstract">
-            {{post.abstract}}
-          </p>
-          {% endif %}
-        </li>
-      {% endfor %}
-    </ul>
-
-  {% endif %}
+  
+  {% include posts_list.html %}
 
 </div>
