--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,35 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
+      <dl class="post-meta">
+        {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
+        <dt><i class="fa fa-calendar"></i> Date: </dt>
+        <dd>
+          <time datetime="{{post.date | date_to_xmlschema}}" itemprop="datePublished">
+            {{ page.date | date: date_format }}
+          </time>
+        </dd>
+        {% if page.author %}
+        <dt><i class="fa fa-pencil"></i> Author: </dt>
+        <dd>
+          {{ page.author }}
+        </dd>
+        {% endif %}
+        {% if page.type %}
+        <dt><i class="fa fa-bookmark"></i> Type: </dt>
+        <dd>
+          {{ page.type }}
+        </dd>
+        {% endif %}
+        {% if page.tags %}
+        <dt class="tag-list"><i class="fa fa-tag"></i> Tags: </dt>
+        {% for tag in page.tags %}
+          <dd class="tag">{{tag}}</dd>
+        {% endfor %}
+        {% endif %}
+      </dl>
+
+    <!--
     <p class="post-meta">
       <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
         {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
@@ -12,7 +41,9 @@ layout: default
       </time>
       {% if page.author %}
         • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
-      {% endif %}</p>
+      {% endif %}
+    </p>
+    -->
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
