Adding correct SEO info and logo

--- a/_includes/facebook-pixel.html
+++ b/_includes/facebook-pixel.html
@@ -8,11 +8,11 @@
   t.src=v;s=b.getElementsByTagName(e)[0];
   s.parentNode.insertBefore(t,s)}(window, document,'script',
   'https://connect.facebook.net/en_US/fbevents.js');
-  fbq('init', '{{site.facebook_pixel}}');
+  fbq('init', '{{site.facebook.pixel}}');
   fbq('track', 'PageView');
 </script>
 <noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id={{site.facebook_pixel}}&ev=PageView&noscript=1"
+  src="https://www.facebook.com/tr?id={{site.facebook.pixel}}&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Facebook Pixel Code -->
 
