Upgrading Font Awesome

--- a/_includes/icon-github.html
+++ b/_includes/icon-github.html
@@ -1,4 +1,4 @@
 <a class="u-url" rel="me" href="https://github.com/{{ include.username }}">
-  <i class="fa fa-github"></i>
+  <i class="fab fa-github"></i>
   <span class="username">{{ include.username }}</span>
 </a>
