--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,13 +15,13 @@
         {% endif %}
         <li>
           <a href="{{ "/feed.xml" | relative_url }}">
-            <i class="fa fa-rss"></i> rss
+            <i class="fas fa-rss"></i> rss
           </a>
         </li>
       </ul>
       <div class="contact-email">
         <a class="u-email" href="mailto:{{ site.email }}">
-          <i class="fa fa-envelope"></i> {{ site.email }}
+          <i class="fas fa-envelope"></i> {{ site.email }}
         </a>
       </div>
     </div>
