--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
   {% seo %}
   <link rel="stylesheet" href="{{ "/assets/styles/main.css" | relative_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
 
   {% if jekyll.environment == 'production' and site.google_analytics %}
