--- a/_includes/icon-twitter.html
+++ b/_includes/icon-twitter.html
@@ -1,4 +1,4 @@
 <a class="u-url" rel="me" href="https://twitter.com/{{ include.username }}">
-  <i class="fa fa-twitter"></i>
+  <i class="fab fa-twitter"></i>
   <span class="username">{{ include.username }}</span>
 </a>
