--- a/_includes/posts_list.html
+++ b/_includes/posts_list.html
@@ -1,6 +1,6 @@
-{% if site.posts.size > 0 %}
+{% if paginator.posts.size > 0 %}
   <ul class="post-list">
-    {% for post in site.posts %}
+    {% for post in paginator.posts %}
       <li>
         {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
 
@@ -36,4 +36,20 @@
     {% endfor %}
   </ul>
 
+{% endif %}
+<!-- Pagination links -->
+{% if paginator.previous_page and paginator.next_page %}
+<div class="pagination">
+  {% if paginator.previous_page %}
+    <a href="{{ paginator.previous_page_path }}" class="previous">Previous</a>
+  {% else %}
+    <span class="previous">Previous</span>
+  {% endif %}
+  <span class="page_number ">Page: {{ paginator.page }} of {{ paginator.total_pages }}</span>
+  {% if paginator.next_page %}
+    <a href="{{ paginator.next_page_path }}" class="next">Next</a>
+  {% else %}
+    <span class="next ">Next</span>
+  {% endif %}
+</div>
 {% endif %}
