Correctly using excerpt and setting up atom metadata

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,4 +15,5 @@
   {% if jekyll.environment == 'production' and site.facebook.pixel %}
     {% include facebook-pixel.html %}
   {% endif %}
+  {% feed_meta %}
 </head>
