--- a/_includes/posts_list.html
+++ b/_includes/posts_list.html
@@ -27,9 +27,9 @@
           </dd>
           {% endif %}
         </dl>
-        {% if post.abstract %}
+        {% if post.excerpt %}
         <p class="abstract">
-          {{post.abstract}}
+          {{post.excerpt}}
         </p>
         {% endif %}
       </li>
