Preparing for launch

--- a/_includes/posts_list.html
+++ b/_includes/posts_list.html
@@ -20,10 +20,10 @@
             {{ post.author }}
           </dd>
           {% endif %}
-          {% if post.type %}
+          {% if post.seo.type %}
           <dt><i class="fas fa-bookmark"></i> Type: </dt>
           <dd>
-            {{ post.type }}
+            {{ post.seo.type }}
           </dd>
           {% endif %}
         </dl>
