--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,10 +19,10 @@ layout: default
           {{ page.author }}
         </dd>
         {% endif %}
-        {% if page.type %}
+        {% if page.seo.type %}
         <dt><i class="fas fa-bookmark"></i> Type: </dt>
         <dd>
-          {{ page.type }}
+          {{ page.seo.type }}
         </dd>
         {% endif %}
         {% if page.tags %}
