Add images to first post

--- a/_sass/rmc/_posts.scss
+++ b/_sass/rmc/_posts.scss
@@ -65,3 +65,11 @@ header.post-header {
 ol {
     margin-left:10px;
 }
+
+figure.img.center {
+    text-align:center;
+}
+
+figure.img figcaption {
+    font-size:.8em;
+}
