--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,22 +1,22 @@
 ---
 layout: default
 ---
-<article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
+<article class="post h-entry">
 
   <header class="post-header">
-    <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
+    <h1 class="post-title p-name">{{ page.title | escape }}</h1>
       <dl class="post-meta">
         {% assign date_format = site.minima.date_format | default: "%b %-d, %Y" %}
         <dt><i class="fas fa-calendar"></i> Date: </dt>
         <dd>
-          <time datetime="{{post.date | date_to_xmlschema}}" itemprop="datePublished">
+          <time datetime="{{post.date | date_to_xmlschema}}">
             {{ page.date | date: date_format }}
           </time>
         </dd>
-        {% if page.author %}
-        <dt><i class="fas fa-pencil"></i> Author: </dt>
+        {% if page.author_name %}
+        <dt><i class="fas fa-pen-square"></i> Author: </dt>
         <dd>
-          {{ page.author }}
+          {{ page.author_name }}
         </dd>
         {% endif %}
         {% if page.seo.type %}
@@ -46,7 +46,7 @@ layout: default
     -->
   </header>
 
-  <div class="post-content e-content" itemprop="articleBody">
+  <div class="post-content e-content">
     {{ content }}
   </div>
 
