--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -129,3 +129,8 @@ ul, ol, dl, figure,
 #gitter-chat.is-collapsed{
     display:none;
 }
+
+.gitter-chat-embed-action-bar {
+    top: -20px;
+    background:none;
+}
