--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,37 +1,38 @@
-<header class="site-header" role="banner">
- <div class="u-full-width site-nav-wrapper">
-  <div class="container site-nav-inner">
+<header class="site-nav-wrapper" role="banner">
+  <div class="site-nav-inner navbar">
     {% assign default_paths = site.pages | map: "path" %}
     {% assign page_paths = site.header_pages | default: default_paths %}
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
-      {% include logo.html %}
-    </a>
+    <section class="navbar-section">
+        <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
+          {% include logo.html %}
+        </a>
+    </section>
     {% if page_paths %}
-      <nav class="site-nav u-pull-right">
-        <!--
-        <input type="checkbox" id="nav-trigger" class="nav-trigger" />
-        <label for="nav-trigger">
-          <span class="menu-icon">
-            <svg viewBox="0 0 18 15" width="18px" height="15px">
-              <path fill="#424242" d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.031C17.335,0,18,0.665,18,1.484L18,1.484z"/>
-              <path fill="#424242" d="M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0c0-0.82,0.665-1.484,1.484-1.484 h15.031C17.335,6.031,18,6.696,18,7.516L18,7.516z"/>
-              <path fill="#424242" d="M18,13.516C18,14.335,17.335,15,16.516,15H1.484C0.665,15,0,14.335,0,13.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.031C17.335,12.031,18,12.696,18,13.516L18,13.516z"/>
-            </svg>
-          </span>
-        </label>
-        -->
-
-          {% for path in page_paths %}
-            {% assign my_page = site.pages | where: "path", path | first %}
-            {% assign icon = my_page.icon %}
-            {% if my_page.title %}
-            <a class="page-link" href="{{ my_page.url | relative_url }}">
-              <i class="fa {{icon | default: 'fa-bookmark'}}"></i> {{ my_page.title | escape }}
-            </a>
-            {% endif %}
-          {% endfor %}
-      </nav>
+    <nav class="site-nav u-pull-right navbar-center">
+        {% for path in page_paths %}
+          {% assign my_page = site.pages | where: "path", path | first %}
+          {% assign icon = my_page.icon %}
+          {% if my_page.title %}
+          <a class="page-link" href="{{ my_page.url | relative_url }}">
+            <i class="fa {{icon | default: 'fa-bookmark'}}"></i> {{ my_page.title | escape }}
+          </a>
+          {% endif %}
+        {% endfor %}
+    </nav>
     {% endif %}
+    <div class="navbar-section">
+        <ul class="social-media-list">
+        {% if site.github.username %}
+        <li>
+          {% include icon-github.html username=site.twitter.username %}
+        </li>
+        {% endif %}
+        {% if site.twitter.username %}
+        <li>
+          {% include icon-twitter.html username=site.twitter.username %}
+        </li>
+        {% endif %}
+        </ul>
+    </div>
   </div>
- </div>
 </header>
