Update css styles

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<article class="post h-entry">
+<article class="post h-entry article-content">
 
   <header class="post-header">
     {% if page.image %}
@@ -41,7 +41,7 @@ layout: default
       </dl>
   </header>
 
-  <div class="post-content e-content">
+  <div class="post-content e-content article-body">
     {{ content }}
   </div>
 
