--- a/_sass/rmc/_posts.scss
+++ b/_sass/rmc/_posts.scss
@@ -90,3 +90,7 @@ figure.img figcaption {
 a, a:visited, a:hover, a:focus {
     color: $color-marine;
 }
+
+img.img-responsive {
+    margin:auto;
+}
