Tales from the Keyboard: Getting to Know Docker

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -126,3 +126,15 @@ ul, ol, dl, figure,
     top: -20px;
     background:none;
 }
+
+code {
+    background-color: #eef;
+    color: black;
+}
+
+pre {
+    code {
+        background: none;
+        white-space: pre-wrap;
+    }
+}
