--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -128,8 +128,15 @@ ul, ol, dl, figure,
 }
 
 code {
-    background-color: #eef;
-    color: black;
+    background-color: black;
+    color: white;
+}
+
+.highlighter-rouge .highlight {
+    background-color: black;
+    box-shadow: 3px 3px 5px 3px #ccc;
+    -webkit-box-shadow: 3px 3px 5px 3px #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
+    -moz-box-shadow:    3px 3px 5px 3px #ccc;  /* Firefox 3.5 - 3.6 */
 }
 
 pre {
@@ -137,5 +144,42 @@ pre {
     code {
         background: none;
         white-space: pre-wrap;
+    }
+}
+
+input.tab-sample-btns {
+    display: none;
+}
+
+label.tab-sample-label {
+    display: block;    
+    padding: 8px 22px;
+    margin: 0 0 1px 0;
+    cursor: pointer;
+    background: #6AAB95;
+    border-radius: 3px;
+    color: #FFF;
+    transition: ease .5s;
+}
+
+.tab-sample {
+    background: #E2E5F6;
+    padding: 10px 25px;
+    border: 1px solid #A7A7A7;
+    margin: 0 0 1px 0;
+    border-radius: 3px;
+}
+
+span.table-sample {
+    display: block;
+}
+
+.toggler {
+    background-color: $primary-color;
+    color: white;
+    padding: .5em;
+
+    .icon-show, .icon-hide {
+        float: right;
     }
 }
